// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StepList renders correctly  1`] = `
<DocumentFragment>
  .cache-1abqgir-Steps {
  list-style: none;
  padding-left: 0;
  text-align: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 24px;
  font-size: 16px;
}

.cache-15bydan-Step {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 1rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #151a2d;
}

.cache-oogtc7-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  border: 1px solid #d4dae7;
  background-color: #ffffff;
  color: #4a4f62;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

.cache-66nq81-StyledDiv {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: auto;
  line-height: 32px;
  font-size: 24px;
}

<ul
    class="cache-1abqgir-Steps e1p9x3di2"
  >
    <li
      class="cache-15bydan-Step e1p9x3di1"
    >
      <div
        class="cache-oogtc7-StyledContainer e1u3ywq30"
      >
        1
      </div>
      <div
        class="cache-66nq81-StyledDiv e1p9x3di0"
      >
        Item 1
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`StepList renders correctly with bulletIcon & variant 1`] = `
<DocumentFragment>
  .cache-1abqgir-Steps {
  list-style: none;
  padding-left: 0;
  text-align: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 24px;
  font-size: 16px;
}

.cache-15bydan-Step {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 1rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #151a2d;
}

.cache-10fqrts-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  background-color: #eafffb;
  color: #149a7b;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

.cache-14kwy0i-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 50%;
  width: 50%;
  min-width: 50%;
  min-height: 50%;
}

.cache-66nq81-StyledDiv {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: auto;
  line-height: 32px;
  font-size: 24px;
}

<ul
    class="cache-1abqgir-Steps e1p9x3di2"
  >
    <li
      class="cache-15bydan-Step e1p9x3di1"
    >
      <div
        class="cache-10fqrts-StyledContainer e1u3ywq30"
      >
        <svg
          class="cache-14kwy0i-StyledIcon-sizeStyles etwatq50"
          viewBox="0 0 24 24"
        >
          <path
            d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
          />
        </svg>
      </div>
      <div
        class="cache-66nq81-StyledDiv e1p9x3di0"
      >
        Item 1
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`StepList renders correctly with bulletIcon 1`] = `
<DocumentFragment>
  .cache-1abqgir-Steps {
  list-style: none;
  padding-left: 0;
  text-align: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 24px;
  font-size: 16px;
}

.cache-15bydan-Step {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 1rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #151a2d;
}

.cache-oogtc7-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  border: 1px solid #d4dae7;
  background-color: #ffffff;
  color: #4a4f62;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

.cache-14kwy0i-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 50%;
  width: 50%;
  min-width: 50%;
  min-height: 50%;
}

.cache-66nq81-StyledDiv {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: auto;
  line-height: 32px;
  font-size: 24px;
}

<ul
    class="cache-1abqgir-Steps e1p9x3di2"
  >
    <li
      class="cache-15bydan-Step e1p9x3di1"
    >
      <div
        class="cache-oogtc7-StyledContainer e1u3ywq30"
      >
        <svg
          class="cache-14kwy0i-StyledIcon-sizeStyles etwatq50"
          viewBox="0 0 24 24"
        >
          <path
            d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
          />
        </svg>
      </div>
      <div
        class="cache-66nq81-StyledDiv e1p9x3di0"
      >
        Item 1
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`StepList renders correctly with disabled state & bullet icon 1`] = `
<DocumentFragment>
  .cache-1abqgir-Steps {
  list-style: none;
  padding-left: 0;
  text-align: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 24px;
  font-size: 16px;
}

.cache-1x18xpe-Step {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 1rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #c4c9d6;
}

.cache-laae9d-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  border: 1px solid #d4dae7;
  background-color: #ffffff;
  color: #b2b6c3;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

.cache-14kwy0i-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 50%;
  width: 50%;
  min-width: 50%;
  min-height: 50%;
}

.cache-66nq81-StyledDiv {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: auto;
  line-height: 32px;
  font-size: 24px;
}

<ul
    class="cache-1abqgir-Steps e1p9x3di2"
  >
    <li
      class="cache-1x18xpe-Step e1p9x3di1"
    >
      <div
        class="cache-laae9d-StyledContainer e1u3ywq30"
      >
        <svg
          class="cache-14kwy0i-StyledIcon-sizeStyles etwatq50"
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <div
        class="cache-66nq81-StyledDiv e1p9x3di0"
      >
        <div>
          Item 1 with disabled state
        </div>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`StepList renders correctly with disabled state 1`] = `
<DocumentFragment>
  .cache-1abqgir-Steps {
  list-style: none;
  padding-left: 0;
  text-align: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 24px;
  font-size: 16px;
}

.cache-1x18xpe-Step {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 1rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #c4c9d6;
}

.cache-laae9d-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  border: 1px solid #d4dae7;
  background-color: #ffffff;
  color: #b2b6c3;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

.cache-66nq81-StyledDiv {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: auto;
  line-height: 32px;
  font-size: 24px;
}

<ul
    class="cache-1abqgir-Steps e1p9x3di2"
  >
    <li
      class="cache-1x18xpe-Step e1p9x3di1"
    >
      <div
        class="cache-laae9d-StyledContainer e1u3ywq30"
      >
        1
      </div>
      <div
        class="cache-66nq81-StyledDiv e1p9x3di0"
      >
        <div>
          Item 1 with disabled state
        </div>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`StepList renders correctly with small size 1`] = `
<DocumentFragment>
  .cache-1abqgir-Steps {
  list-style: none;
  padding-left: 0;
  text-align: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 24px;
  font-size: 16px;
}

.cache-15bydan-Step {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 1rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #151a2d;
}

.cache-m3mz6z-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  border: 1px solid #d4dae7;
  background-color: #ffffff;
  color: #4a4f62;
  width: 24px;
  height: 24px;
  font-size: 14px;
}

.cache-1jkk4vs-StyledDiv {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: auto;
  line-height: 24px;
  font-size: 16px;
}

<ul
    class="cache-1abqgir-Steps e1p9x3di2"
  >
    <li
      class="cache-15bydan-Step e1p9x3di1"
    >
      <div
        class="cache-m3mz6z-StyledContainer e1u3ywq30"
      >
        1
      </div>
      <div
        class="cache-1jkk4vs-StyledDiv e1p9x3di0"
      >
        Item 1 small
      </div>
    </li>
  </ul>
</DocumentFragment>
`;
